<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_text"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tvEx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_exercises"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain"
        tools:ignore="MissingConstraints"/>

    <LinearLayout
        android:id="@+id/LinearL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEx"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin"
        android:src="@raw/ruki"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvSlogan1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ruki"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints"/>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin"
            android:src="@raw/nogi"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvSlogan2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nogi"
            android:textSize="@dimen/text_size"
            android:layout_margin="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="MissingConstraints"/>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin"
                android:src="@raw/telo"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvSlogan3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_telo"
                android:textSize="@dimen/text_size"
                android:layout_margin="@dimen/margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:ignore="MissingConstraints"/>
        </LinearLayout>

    </LinearLayout >  <!--   "@+id/LinearL" */  -->

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_exercise"
        android:layout_margin="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearL"
        tools:ignore="MissingConstraints"/>


</androidx.constraintlayout.widget.ConstraintLayout>